welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: ')' expected but '=' found.
    if (1 = 1)
          ^SlugHunting:13: error: illegal start of simple expression
}
^