welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    if (1 = 1)
    {
    	avance;
    	baisseBrosse;
    	leveBrosse;
    }
    else
    {
    	gauche;
    }
}

def isFacingTrail():Boolean = {
     
   
   if (!estFaceMur)
    { 
    	avance; 
    
   if (getCouleurSol != Color.green)
	{recule;	false;}
	else {recule; true;}
    }
	else 
	{
		gauche; false;
	}
    
   
}        

hunt;

prendBiscuit;